White Space UI fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
    min-height: 100vh;
+   padding-bottom: 2rem;
 }
 body #dark {
    background: var(--bg_dark);
